--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,43 +1,38 @@
+body {
+  font-family: Roboto, sans-serif;
+}
+
+div {
+  display: block;
+}
+.main {
+  display: flex;
+  padding: 20px 2%;
+  max-width: 1200px;
+  margin: 50px auto 0;
+  margin-top: 50px;
+  margin-right: auto;
+  margin-bottom: 0px;
+  margin-left: auto;
+}
+
+/* sizes div */
 .filters {
   width: 15%;
   margin-right: 15px;
 }
+.sizes-heading {
+  display: block;
 
-.filters .title {
-  margin-top: 2px;
-  margin-bottom: 20px;
+  font-weight: bold;
+  color: #1b1a20;
+  font-family: Roboto, sans-serif;
 }
-
-.filters-available-size {
+.available-sizes {
   display: inline-block;
   margin-bottom: 10px;
-}
-
-.filters-available-size label input {
-  //   position: absolute;
-  opacity: 0;
-  cursor: pointer;
-}
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-}
-
-input {
-  line-height: normal;
-}
-button,
-input,
-optgroup,
-select,
-textarea {
-  color: inherit;
-  font: inherit;
-  margin: 0;
-}
-
-.filters-available-size label .checkmark {
+  color: #1b1a20;
+  font-family: Roboto, sans-serif;
   top: 0;
   left: 0;
   width: 35px;
@@ -49,17 +44,137 @@ textarea {
   color: #1b1a20;
   background-color: #ececec;
   border: 1px solid transparent;
+  margin-left: 9px;
+}
+.checkbox-input {
+  position: absolute;
+  opacity: 0;
   cursor: pointer;
-  display: inline-block;
+}
+input[type="checkbox"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+input {
+  line-height: normal;
+}
+.checkmark-span {
+  /* position: absolute;
+  top: 0; */
+  margin: 5px;
+  padding: 5px;
+  left: 0;
+  width: 35px;
+  height: 35px;
+  font-size: 0.8em;
+  border-radius: 50%;
+  line-height: 35px;
+  text-align: center;
+  color: #1b1a20;
+  background-color: #ececec;
+  border: 1px solid transparent;
 }
 
+/* right side */
+.right-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 85%;
+  min-height: 600px;
+  margin-top: 12px;
+}
+.rightcontainer-header {
+  width: 100%;
+  margin-bottom: 10px;
+}
+.product-found {
+  float: left;
+  margin-top: 8px;
+  font-size: 80%;
+}
+.sort {
+  float: right;
+  font-style: bold;
+  font-weight: 600;
+}
+.rightcontainer-item {
+  width: 25%;
+  position: relative;
+  text-align: center;
+  box-sizing: border-box;
+  padding: 10px;
+  margin-bottom: 30px;
+  border: 1px solid transparent;
+  cursor: pointer;
+  margin-top: 12px;
+}
+.rightcontainer-item :hover .rightcontainer-itembutton {
+  background-color: gold;
+}
+
+.rightcontainer-item:hover {
+  border: 0.2px solid rgb(219, 215, 215);
+}
+
+.freeshipping {
+  position: absolute;
+  color: #ececec;
+  top: 10px;
+  right: 10px;
+  padding: 5px;
+  font-size: 0.6em;
+  background-color: #1b1a20;
+  cursor: default;
+  font-weight: 600;
+  color: tomato;
+}
+img {
+  width: 100%;
+}
+.rightcontainer-itemtitle {
+  position: relative;
+  padding: 10px 20px;
+  height: 45px;
+  font-weight: 600;
+}
+.rightcontainer-itemprice {
+  height: 60px;
+}
+.installment {
+  color: #9c9b9b;
+}
+.rightcontainer-itembutton {
+  background-color: #1b1a20;
+  color: #fff;
+  padding: 15px 0;
+  margin-top: 10px;
+  cursor: pointer;
+  transition-property: background-color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+}
 div {
   display: block;
 }
-h4 {
-  display: block;
-  margin-left: 1rem;
-  font-weight: bold;
-  color: #1b1a20;
-  font-family: Roboto, sans-serif;
+
+span {
+  font-style: bold;
+  font-weight: 600;
+}
+select {
+  margin-left: 9px;
+  font-style: bold;
+  font-weight: 600;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.2rem 0.5rem;
+}
+b {
+  font-style: bold;
+  font-weight: 600;
+}
+option {
+  font-style: bold;
+  font-weight: 600;
 }
